--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "less-imports",
-  "version": "1.0.0",
-  "description": "Simple utility to get a list of @import references from a .less file.",
+  "version": "1.1.0",
+  "description": "Simple utility which recursively finds all the files which are @import-ed by a LESS file.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/marklagendijk/node-less-imports/issues"
   },
-  "homepage": "https://github.com/marklagendijk/node-less-imports"
+  "homepage": "https://github.com/marklagendijk/node-less-imports",
+  "dependencies": {
+    "lodash": "^2.4.1"
+  }
 }
